--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "country-iso-2-to-3": "^1.1.0",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1"
   }
 }
