--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "mongodb": "^6.13.1",
+    "qrcode.react": "^4.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "xlsx": "^0.18.5"
   }
 }
