--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "epxress": "^0.0.1-security",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
