--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "qrcode.react": "^4.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
